--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -3,4 +3,5 @@
   height: 5rem;
   position: sticky;
   top: 0;
+  z-index: 2;
 }
